[tool.poetry]
name = "bot-assistant"
version = "0.7.0"
description = "Assistant bot for address book banagement"
authors = ["Fred Ibara <frederikibara@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
